--- a/resources/CDContenu/DHelp/index.html
+++ b/resources/CDContenu/DHelp/index.html
@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr"> 
   <head> 
-    <title>CD DeViNT 2011 : Aide</title> 
+    <title>CD DeViNT: Aide</title> 
     <link rel="shortcut icon" href="resources/aide.ico" type="image/x-icon" /> 
     <link rel="icon" href="resources/aide.ico" type="image/x-icon" /> 
     <style type="text/css" media="all">@import "css/base.css";</style>
@@ -12,12 +12,12 @@
   <body> 
     <div id="banner"> 
       <h1 id="title">
-	<a href="http://devint.polytech.unice.fr/"><img height="58" alt="DeViNT" id="logo" src="resources/logoDeViNT.gif" /></a>
-	Déficients Visuels et Nouvelles Technologies</h1> 
+	<a href="index.html"><img height="60" alt="DeViNT" id="logo" src="resources/logoCDDeViNT.png" /></a>
+	Aide du CD DeViNT</h1> 
     </div> 
       <ul class="navbar" id="menu"> 
     <li><span class="hideme"><a href="#skip" accesskey="s" title="Passer le menu de navigation pour aller à la partie principale du document">Passer la Navigation</a> |</span> 
-    <a href="index.html" accesskey="h" title="CD DeViNT 2011: Aide"><strong>Accueil</strong></a></li> 
+    <a href="index.html" accesskey="h" title="CD DeViNT: Aide"><strong>Accueil</strong></a></li> 
     <li><a href="jeux.html" title="Aide sur les Jeux Installés">Les Jeux Installés</a></li> 
     <li><a href="installation.html" title="Installation du CD">Installation Du CD</a></li> 
     <li><a href="api.html" title="Comment créer son propre projet DeViNT">Comment Créer Son Propre Projet</a></li> 
